fix: SJIP-1019 remove extra padding

--- a/src/style/themes/kids-first/_theme.template.scss
+++ b/src/style/themes/kids-first/_theme.template.scss
@@ -73,7 +73,7 @@ $sidebar-quick-filter-input-box-shadow-focus: 0 0 0 2px $gray-8, 0 0 0 3px $gray
 $sidebar-quick-filter-input-placeholder-color: $gray-6;
 $sidebar-quick-filter-input-text-color: $gray-8;
 
-$sidebar-content-panel-padding: 16px;
+$sidebar-content-panel-padding: 0 16px;
 $sidebar-content-panel-width: 320px;
 $sidebar-content-panel-close-icon-color: $gray-8;
 $sidebar-content-panel-right-border: 1px solid $gray-5;
